Fixed hero unit spacing

--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -45,5 +45,5 @@ footer {
 }
 
 .hero-unit h1 {
-	line-height: 1.3em;
+	padding-bottom: 15px;
 }
